fix header on mobile

--- a/assets/scss/_layouts.scss
+++ b/assets/scss/_layouts.scss
@@ -68,3 +68,10 @@
     }
   }
 }
+
+.navbar-nav {
+  @media (max-width: 576px) {
+    display: flex;
+    flex-direction: column;
+  }
+}
